fix: test 버그 제거